--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="C:\Users\BalaKumaran\Desktop\New folder (2)\WhatsApp Image 2024-07-24 at 10.39.20_93f37ba4.jpg" alt="profile picture" />
+        <img src="WhatsApp Image 2024-07-24 at 10.39.20_93f37ba4.jpg" alt="profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('C:\Users\BalaKumaran\Documents\resume[1].pdf')"
+            onclick="window.open('resume[1].pdf')"
           >
             Download CV
           </button>
@@ -88,7 +88,7 @@
             </div> -->
             <div class="details-container">
               <img
-                src="C:\Users\BalaKumaran\Desktop\New folder (2)\education.png"
+                src="education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -106,7 +106,7 @@
         </div>
       </div>
       <img
-        src="C:\Users\BalaKumaran\Desktop\New folder (2)\arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -122,7 +122,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="C:\Users\BalaKumaran\Desktop\New folder (2)\experience.png"
+                  src="experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -133,7 +133,7 @@
               </article>
               <article>
                 <img
-                  src="C:\Users\BalaKumaran\Desktop\New folder (2)\experience.png"
+                  src="experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -144,7 +144,7 @@
               </article>
               <article>
                 <img
-                  src="C:\Users\BalaKumaran\Desktop\New folder (2)\experience.png"
+                  src="experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -155,7 +155,7 @@
               </article>
               <article>
                 <img
-                  src="C:\Users\BalaKumaran\Desktop\New folder (2)\experience.png"
+                  src="experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -166,7 +166,7 @@
               </article>
               <article>
                 <img
-                  src="C:\Users\BalaKumaran\Desktop\New folder (2)\experience.png"
+                  src="experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -177,7 +177,7 @@
               </article>
               <article>
                 <img
-                  src="C:\Users\BalaKumaran\Desktop\New folder (2)\experience.png"
+                  src="experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -240,7 +240,7 @@
         </div>
       </div>
       <img
-        src="C:\Users\BalaKumaran\Desktop\New folder (2)\arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -338,7 +338,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="C:\Users\BalaKumaran\Desktop\New folder (2)\email.png"
+            src="email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -346,7 +346,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="C:\Users\BalaKumaran\Desktop\New folder (2)\linkedin.png"
+            src="linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
