--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="C:\Users\BalaKumaran\Desktop\New folder (2)\linkedin.png"
+            src="linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://linkedin.com/'"
           />
           <img
-            src="C:\Users\BalaKumaran\Desktop\New folder (2)\github.png"
+            src="github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https:https://github.com/Balakumaran-sk/kumaran-004'"
